adjusted skills styling'

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             <div class = 'projectsDiv evenlySpaced padBot50'>
               <div class = 'text padTop25'>
-                <p>Languages:</p>
+                <p class ='centerat800'>Languages:</p>
                 <ul>
                   <li>JavaScript</li>
                   <li>HTML/CSS</li>
@@ -113,14 +113,14 @@
                 </ul>
               </div>
               <div class = 'text padTop25'>
-                <p>Frameworks:</p>
+                <p class ='centerat800'>Frameworks:</p>
                 <ul>
                   <li>Ruby on Rails</li>
                   <li>ReactJS</li>
                 </ul>
               </div>
               <div class = 'text padTop25'>
-                <p>Other Tools:</p>
+                <p class ='centerat800'>Other Tools:</p>
                 <ul>
                   <li>Redux</li>
                   <li>NodeJS</li>
