--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </div>
             </div>
             <div class = 'projectsDiv evenlySpaced padBot50'>
-              <div class = 'text padTop25'>
+              <div class = 'text'>
                 <p class ='centerat800'>Languages:</p>
                 <ul>
                   <li>JavaScript</li>
@@ -112,14 +112,14 @@
                   <li>Ruby</li>
                 </ul>
               </div>
-              <div class = 'text padTop25'>
+              <div class = 'text'>
                 <p class ='centerat800'>Frameworks:</p>
                 <ul>
                   <li>Ruby on Rails</li>
                   <li>ReactJS</li>
                 </ul>
               </div>
-              <div class = 'text padTop25'>
+              <div class = 'text'>
                 <p class ='centerat800'>Other Tools:</p>
                 <ul>
                   <li>Redux</li>
