--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class = 'projectsDiv evenlySpaced padBot50'>
               <div class = 'text'>
                 <p class ='centerat800'>Languages:</p>
-                <ul>
+                <ul class = 'specialUL'>
                   <li>JavaScript</li>
                   <li>HTML/CSS</li>
                   <li>Java</li>
@@ -114,14 +114,14 @@
               </div>
               <div class = 'text'>
                 <p class ='centerat800'>Frameworks:</p>
-                <ul>
+                <ul class = 'specialUL'>
                   <li>Ruby on Rails</li>
                   <li>ReactJS</li>
                 </ul>
               </div>
               <div class = 'text'>
                 <p class ='centerat800'>Other Tools:</p>
-                <ul>
+                <ul class = 'specialUL'>
                   <li>Redux</li>
                   <li>NodeJS</li>
                   <li>Unity</li>
