added the techie chart

--- a/index.html
+++ b/index.html
@@ -46,10 +46,15 @@
               <div class = 'intro '>
                 <h3 class ='inline'>hans.</h3>
                 <h3 class = 'inline green'>Projects()</h3>
-                <div class = 'padTop25'>
+                <div class = 'padTop25 flex flexrtoc flexJustifyContentSpaceBetween'>
                   <a href = 'https://thetechiestore.herokuapp.com/'>
                     <div class = 'img overlay'>
                       <img src = 'theTechieStore.png' alt = 'The Techie Store'/>
+                    </div>
+                  </a>
+                  <a href = 'https://thetechiestore.herokuapp.com/'>
+                    <div class = 'img overlay'>
+                      <img src = 'theTechieChart.png' alt = 'The Techie Chart'/>
                     </div>
                   </a>
                 </div>
