update project links

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                       <img src = 'theTechieStore.png' alt = 'The Techie Store'/>
                     </div>
                   </a>
-                  <a href = 'https://thetechiestore.herokuapp.com/'>
+                  <a href = 'https://thetechiechart.herokuapp.com/'>
                     <div class = 'img overlay'>
                       <img src = 'theTechieChart.png' alt = 'The Techie Chart'/>
                     </div>
