--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                 <ul class = 'specialUL'>
                   <li>JavaScript</li>
                   <li>HTML/CSS</li>
+                  <li>Dart</li>
                   <li>Java</li>
                   <li>Ruby</li>
                 </ul>
@@ -122,6 +123,7 @@
                 <ul class = 'specialUL'>
                   <li>Ruby on Rails</li>
                   <li>ReactJS</li>
+                  <li>Flutter</li>
                 </ul>
               </div>
               <div class = 'text'>
