--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
           <div class = 'center'>
             <a href = 'https://github.com/hk72'><i class="fa fa-github" aria-hidden="true"></i></a>
             <a href = 'https://www.linkedin.com/in/hans-krohn-b7488b18a/'><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-            <a href = 'mailto:hk72.contact@gmail.com'><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+            <a href = 'mailto:hanskrohn70@gmail.com'><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
             <div class = 'vl'></div>
           </div>
         </div>
       </div>
     </div>
+    <script type="text/javascript" src="./index.js"></script>
   </body>
-  <script type="text/javascript" src="./index.js"></script>
 </html>
