added high or low

--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
           <li  onclick = "bringOutMenuBar()" class = 'hiddenLI'><a href = '#about'>About</a></li>
           <li  onclick = "bringOutMenuBar()" class = 'hiddenLI'><a href = '#education'>Education</a></li>
           <li  onclick = "bringOutMenuBar()" class = 'hiddenLI'><a href = '#skills'>Skills</a></li>
+          <li  onclick = "bringOutMenuBar()" class = 'hiddenLI'><a href = './Resume.pdf'>Resume</a></li>
         </ul>
         <ul>
           <li class = 'link'><a href = '#projects'>Projects</a></li>
           <li class = 'link'><a href = '#about'>About</a></li>
           <li class = 'link'><a href = '#education'>Education</a></li>
           <li class = 'link'><a href = '#skills'>Skills</a></li>
+          <li class = 'link'><a href = './Resume.pdf'>Resume</a></li>
         </ul>
       </nav>
       <div id = 'landing' class = 'body'>
@@ -42,19 +44,24 @@
                 <p>Student | Passionate Coder</p>
               </div>
             </div>
-            <div id = 'projects' class = 'alignCenter padTop50'>
-              <div class = 'intro '>
+            <div id = 'projects' class = ' padTop50'>
+              <div class = 'intro centerText'>
                 <h3 class ='inline'>hans.</h3>
                 <h3 class = 'inline green'>Projects()</h3>
-                <div class = 'padTop25 flex flexrtoc flexJustifyContentSpaceBetween'>
-                  <a href = 'https://thetechiestore.herokuapp.com/'>
-                    <div class = 'img overlay'>
-                      <img src = 'theTechieStore.png' alt = 'The Techie Store'/>
-                    </div>
-                  </a>
+                <div class = 'padTop25 flex flexrtoc flexJustifyContentSpaceBetween projects'>
                   <a href = 'https://thetechiechart.herokuapp.com/'>
                     <div class = 'img overlay'>
                       <img src = 'theTechieChart.png' alt = 'The Techie Chart'/>
+                    </div>
+                  </a>
+                  <a href = 'https://high-or-low-game.herokuapp.com/'>
+                    <div class = 'img overlay'>
+                      <img src = 'HighOrLow.png' alt = 'High Or Low'/>
+                    </div>
+                  </a>
+                  <a href = 'https://thetechiestore.herokuapp.com/'>
+                    <div class = 'img overlay'>
+                      <img src = 'theTechieStore.png' alt = 'The Techie Store'/>
                     </div>
                   </a>
                 </div>
@@ -62,8 +69,8 @@
             </div>
             <div class = 'padTop100'>
             </div>
-            <div id = 'about' class = 'alignCenter padTop50'>
-              <div class = 'intro'>
+            <div id = 'about' class = ' padTop50'>
+              <div class = 'intro centerText'>
                 <h3 class ='inline'>hans.</h3>
                 <h3 class = 'inline green'>About()</h3>
               </div>
@@ -81,8 +88,8 @@
             </div>
             <div class = 'padTop100'>
             </div>
-            <div id = 'education' class = 'alignCenter padTop50'>
-              <div class = 'intro'>
+            <div id = 'education' class = ' padTop50'>
+              <div class = 'intro centerText'>
               <h3 class ='inline'>hans.</h3>
               <h3 class = 'inline green'>Education()</h3>
               </div>
@@ -101,8 +108,8 @@
             </div>
             <div class = 'padTop100'>
             </div>
-            <div id = 'skills' class = 'alignCenter padTop50'>
-              <div class = 'intro'>
+            <div id = 'skills' class = ' padTop50'>
+              <div class = 'intro centerText'>
                 <h3 class ='inline'>hans.</h3>
                 <h3 class = 'inline green'>Skills()</h3>
               </div>
