--- a/index.html
+++ b/index.html
@@ -128,9 +128,10 @@
               <div class = 'text'>
                 <p class ='centerat800'>Frameworks:</p>
                 <ul class = 'specialUL'>
-                  <li>Ruby on Rails</li>
+                  <li>Angular</li>
                   <li>ReactJS</li>
                   <li>Flutter</li>
+                  <li>Ruby on Rails</li>
                 </ul>
               </div>
               <div class = 'text'>
