--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             </div>
             <div id = 'projects' class = ' padTop50'>
               <div class = 'intro centerText'>
-                <h3 class ='inline'>hans.</h3>
-                <h3 class = 'inline green'>Projects()</h3>
+                <h3 class ='inline name'>hans.</h3>
+                <h3 class = 'inline green subField'>Projects()</h3>
                 <div class = 'padTop25 flex flexrtoc flexJustifyContentSpaceBetween projects'>
                   <a href = 'https://thetechiechart.herokuapp.com/'>
                     <div class = 'img overlay'>
@@ -71,8 +71,8 @@
             </div>
             <div id = 'about' class = ' padTop50'>
               <div class = 'intro centerText'>
-                <h3 class ='inline'>hans.</h3>
-                <h3 class = 'inline green'>About()</h3>
+                <h3 class ='inline name'>hans.</h3>
+                <h3 class = 'inline green subField'>About()</h3>
               </div>
             </div>
             <div class = 'text'>
@@ -90,8 +90,8 @@
             </div>
             <div id = 'education' class = ' padTop50'>
               <div class = 'intro centerText'>
-              <h3 class ='inline'>hans.</h3>
-              <h3 class = 'inline green'>Education()</h3>
+              <h3 class ='inline name'>hans.</h3>
+              <h3 class = 'inline green subField'>Education()</h3>
               </div>
             </div>
             <div class = 'text'>
@@ -110,8 +110,8 @@
             </div>
             <div id = 'skills' class = ' padTop50'>
               <div class = 'intro centerText'>
-                <h3 class ='inline'>hans.</h3>
-                <h3 class = 'inline green'>Skills()</h3>
+                <h3 class ='inline name'>hans.</h3>
+                <h3 class = 'inline green subField'>Skills()</h3>
               </div>
             </div>
             <div class = 'projectsDiv evenlySpaced padBot50'>
