--- a/index.html
+++ b/index.html
@@ -13,151 +13,27 @@
     <title>Hans Krohn</title>
   </head>
   <body id="root">
-    <div>
-      <nav id = 'navbar'>
-        <div class = 'logoNav'>
-          <a href = '#landing'><img src = 'logo.png' alt = '>~hk72'/></a>
+    <nav>
+      <div class = "navigation flex">
+        <div class = "logo">
+          <img class = "pointer" src = 'logo.png' alt = '>~hk72'/>
         </div>
-        <i class = "checkbtn fa fa-bars" aria-hidden="true" onclick = "bringOutMenuBar()" ></i>
-        <ul id = 'hUL' class = 'hiddenUL'>
-          <li  onclick = "bringOutMenuBar()" class = 'hiddenLI'><a href = '#projects'>Projects</a></li>
-          <li  onclick = "bringOutMenuBar()" class = 'hiddenLI'><a href = '#about'>About</a></li>
-          <li  onclick = "bringOutMenuBar()" class = 'hiddenLI'><a href = '#education'>Education</a></li>
-          <li  onclick = "bringOutMenuBar()" class = 'hiddenLI'><a href = '#skills'>Skills</a></li>
-          <li  onclick = "bringOutMenuBar()" class = 'hiddenLI'><a href = './Resume.pdf'>Resume</a></li>
-        </ul>
-        <ul>
-          <li class = 'link'><a href = '#projects'>Projects</a></li>
-          <li class = 'link'><a href = '#about'>About</a></li>
-          <li class = 'link'><a href = '#education'>Education</a></li>
-          <li class = 'link'><a href = '#skills'>Skills</a></li>
-          <li class = 'link'><a href = './Resume.pdf'>Resume</a></li>
-        </ul>
-      </nav>
-      <div id = 'landing' class = 'body'>
-        <div class = 'mainContent'>
-          <div class = 'setWidth'>
-            <div class = 'block alignCenter'>
-              <div class = 'landing'>
-                <h3>Hi, my name is</h3>
-                <h1>Hans Krohn</h1>
-                <p>Student | Passionate Coder</p>
-              </div>
-            </div>
-            <div id = 'projects' class = ' padTop50'>
-              <div class = 'intro centerText'>
-                <h3 class ='inline name'>hans.</h3>
-                <h3 class = 'inline green subField'>Projects()</h3>
-                <div class = 'padTop25 flex flexrtoc flexJustifyContentSpaceBetween projects'>
-                  <a href = 'https://thetechiechart.herokuapp.com/'>
-                    <div class = 'img overlay'>
-                      <img src = 'theTechieChart.png' alt = 'The Techie Chart'/>
-                    </div>
-                  </a>
-                  <a href = 'https://high-or-low-game.herokuapp.com/'>
-                    <div class = 'img overlay'>
-                      <img src = 'HighOrLow.png' alt = 'High Or Low'/>
-                    </div>
-                  </a>
-                  <a href = 'https://thetechiestore.herokuapp.com/'>
-                    <div class = 'img overlay'>
-                      <img src = 'theTechieStore.png' alt = 'The Techie Store'/>
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class = 'padTop100'>
-            </div>
-            <div id = 'about' class = ' padTop50'>
-              <div class = 'intro centerText'>
-                <h3 class ='inline name'>hans.</h3>
-                <h3 class = 'inline green subField'>About()</h3>
-              </div>
-            </div>
-            <div class = 'text'>
-              <p>
-                Hi! I'm Hans, a Software Engineering Student at Western University and a
-                graduate from FlatIron School, a coding Bootcamp.
-              </p>
-              <p>
-                I have always had a passion to make ideas a reality. With code, I have been able to make
-                ideas tangible. I hope to continue to improving
-                and learning in this ever changing field.
-              </p>
-            </div>
-            <div class = 'padTop100'>
-            </div>
-            <div id = 'education' class = ' padTop50'>
-              <div class = 'intro centerText'>
-              <h3 class ='inline name'>hans.</h3>
-              <h3 class = 'inline green subField'>Education()</h3>
-              </div>
-            </div>
-            <div class = 'text'>
-              <div class = 'padTop25'>
-                <h3 class = 'inline number'>Western University</h3>
-                <h3 class = 'inline noUnderline'> - London ON</h3>
-                <p class = 'padTop15'>Bachelor of Software Engineering - May 2022 (Expected Graduation Date)</p>
-              </div>
-              <div class = 'padTop25'>
-                <h3 class = 'inline number'>FlatIron School</h3>
-                <h3 class = 'inline noUnderline'> - Houston TX</h3>
-                <p class = 'padTop15'>Software Engineering Bootcamp - May 2019 - August 2019</p>
-              </div>
-            </div>
-            <div class = 'padTop100'>
-            </div>
-            <div id = 'skills' class = ' padTop50'>
-              <div class = 'intro centerText'>
-                <h3 class ='inline name'>hans.</h3>
-                <h3 class = 'inline green subField'>Skills()</h3>
-              </div>
-            </div>
-            <div class = 'projectsDiv evenlySpaced padBot50'>
-              <div class = 'text'>
-                <p class ='centerat800'>Languages:</p>
-                <ul class = 'specialUL'>
-                  <li>JavaScript</li>
-                  <li>HTML/CSS</li>
-                  <li>Dart</li>
-                  <li>Java</li>
-                  <li>Ruby</li>
-                </ul>
-              </div>
-              <div class = 'text'>
-                <p class ='centerat800'>Frameworks:</p>
-                <ul class = 'specialUL'>
-                  <li>Angular</li>
-                  <li>ReactJS</li>
-                  <li>Flutter</li>
-                  <li>Ruby on Rails</li>
-                </ul>
-              </div>
-              <div class = 'text'>
-                <p class ='centerat800'>Other Tools:</p>
-                <ul class = 'specialUL'>
-                  <li>Redux</li>
-                  <li>NodeJS</li>
-                  <li>Unity</li>
-                  <li>MongoDB</li>
-                  <li>SQL</li>
-                  <li>Github</li>
-                  <li>Git</li>
-                </ul>
-              </div>
-            </div>
-          </div>
+        <div class = "webView">
+          <ul class = "flex">
+            <li class = "pointer" >Projects</li>
+            <li class = "pointer" >About</li>
+            <li class = "pointer" >Education</li>
+            <li class = "pointer" >Skills</li>
+            <li class = "pointer" >Resume</li>
+          </ul>
         </div>
-        <div class = 'leftInfo'>
-          <div class = 'center'>
-            <a href = 'https://github.com/hk72'><i class="fa fa-github" aria-hidden="true"></i></a>
-            <a href = 'https://www.linkedin.com/in/hans-krohn-b7488b18a/'><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-            <a href = 'mailto:hanskrohn70@gmail.com'><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-            <div class = 'vl'></div>
-          </div>
+        <div class = "mobileView">
+          <i class = "checkbtn fa fa-bars" aria-hidden="true" ></i>
         </div>
       </div>
+    </nav>
+    <div class = "test">
+
     </div>
     <script type="text/javascript" src="./index.js"></script>
   </body>
