--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
         </div>
       </div>
     </nav>
-    <div class = "test">
+    <div>
+      <div class = "landing">
 
+      </div>
+      <div class = "test">
+        
+      </div>
     </div>
     <script type="text/javascript" src="./index.js"></script>
   </body>
