--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
       </div>
     </nav>
     <div>
-      <div class = "landing">
-
+      <div class = "backgroundImage">
+      </div>
+      <div class = "landing flex marginLeft5Percent">
+        <h3 ><span class = "txt" id = "intro"></span></h3>
+        <h1 ><span class = "txt" id = "name"></span></h1>
+        <p><span class = "txt" id = "description"></span></p>
       </div>
       <div class = "test">
-        
       </div>
     </div>
     <script type="text/javascript" src="./index.js"></script>
