main content and look

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
       <div class = "landing flex marginLeft5Percent">
         <h3 ><span class = "txt" id = "intro"></span></h3>
-        <h1 ><span class = "txt" id = "name"></span></h1>
+        <h1 ><span class = "txt colorGreen" id = "name"></span></h1>
         <p><span class = "txt" id = "description"></span></p>
       </div>
       <div class = "container">
@@ -49,66 +49,140 @@
             <h3 data-aos="fade-right" data-aos-offset="350" data-aos-once="true">Projects</h3>
             <hr data-aos="fade-left" data-aos-offset="350" data-aos-once="true">
           </div>
-          <div class = "card flex" data-aos="fade-right" data-aos-offset="400" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+          <div class = "card flex" data-aos="fade-left" data-aos-offset="350" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+            <div class="flex60">
+              <div class = "content">
+                <h4>Tracker</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum fugit dicta omnis sed, quos beatae illo aliquid voluptatum iure sunt voluptate, nulla aspernatur cumque dignissimos dolorem in accusantium hic neque.</p>
+                <p class = "technologies">NodeJS | MongoDB | ReactJS</p>
+                <div class = "flex icons start">
+                  <a class = "pointer" href="https://thetechiechart.herokuapp.com/"><i class="fas fa-external-link-alt"></i></a>
+                  <a class = "pointer" href = "https://github.com/hk72/Tracker-Frontend"><i class="fa fa-github" aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </div>
             <div class="flex40 flex">
               <div class = "image">
                 <img src = "./tracker.png" alt = "Tracker"/>
               </div>
             </div>
-            <div class="flex60">
-              <div class = "content">
-                <h4>Tracker</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum fugit dicta omnis sed, quos beatae illo aliquid voluptatum iure sunt voluptate, nulla aspernatur cumque dignissimos dolorem in accusantium hic neque.</p>
-                <div class = "flex icons end">
-                  <i class="fas fa-external-link-alt"></i>
-                  <i class="fa fa-github" aria-hidden="true"></i>
-                </div>
-              </div>
-            </div>
           </div>
-          <div class = "card flex" data-aos="fade-left" data-aos-offset="400" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
-            <div class="flex60">
-              <div class = "content">
-                <h4>E-commerce</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum fugit dicta omnis sed, quos beatae illo aliquid voluptatum iure sunt voluptate, nulla aspernatur cumque dignissimos dolorem in accusantium hic neque.</p>
-                <div class = "flex icons start">
-                  <i class="fas fa-external-link-alt"></i>
-                  <i class="fa fa-github" aria-hidden="true"></i>
-                </div>
-              </div>
-            </div>
+          <div class = "card flex" data-aos="fade-right" data-aos-offset="350" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
             <div class="flex40 flex">
               <div class = "image">
                 <img src = "./eccomerce.png" alt = "E-commerce"/>
               </div>
             </div>
+            <div class="flex60">
+              <div class = "content">
+                <h4>E-commerce</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum fugit dicta omnis sed, quos beatae illo aliquid voluptatum iure sunt voluptate, nulla aspernatur cumque dignissimos dolorem in accusantium hic neque.</p>
+                <p class = "technologies">NodeJS | MongoDB | ReactJS</p>
+                <div class = "flex icons end">
+                  <a class = "pointer" href = "https://thetechiestore.herokuapp.com/"><i class="fas fa-external-link-alt"></i></a>
+                  <a class = "pointer" href = "https://github.com/hk72/TheTechieStore-FrontEnd"><i class="fa fa-github" aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class = "card flex" data-aos="fade-right" data-aos-offset="400" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+          <div class = "card flex" data-aos="fade-left" data-aos-offset="350" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+            <div class="flex60">
+              <div class = "content">
+                <h4>High or Low</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum fugit dicta omnis sed, quos beatae illo aliquid voluptatum iure sunt voluptate, nulla aspernatur cumque dignissimos dolorem in accusantium hic neque.</p>
+                <p class = "technologies">NodeJS | SocketIO | AngularJS</p>
+                <div class = "flex icons start">
+                  <a class = "pointer" href = "https://high-or-low-game.herokuapp.com/"><i class="fas fa-external-link-alt"></i></a>
+                  <a class = "pointer" href = "https://github.com/hk72/HighOrLowFrontEnd"><i class="fa fa-github" aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </div>
             <div class="flex40 flex">
               <div class = "image">
                 <img src = "./High or low.png" alt = "High or Low"/>
               </div>
             </div>
-            <div class="flex60">
-              <div class = "content">
-                <h4>High or Low</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum fugit dicta omnis sed, quos beatae illo aliquid voluptatum iure sunt voluptate, nulla aspernatur cumque dignissimos dolorem in accusantium hic neque.</p>
-                <div class = "flex icons end">
-                  <i class="fas fa-external-link-alt"></i>
-                  <i class="fa fa-github" aria-hidden="true"></i>
-                </div>
+          </div>
+        </div>
+        <div class = "subtitle flex">
+          <div>
+            <h3 data-aos="fade-right" data-aos-offset="350" data-aos-once="true">About</h3>
+            <hr data-aos="fade-left" data-aos-offset="350" data-aos-once="true">
+          </div>
+          <div class="flex spaceTop">
+            <div class = "flex40 flex">
+              <div class = "image" data-aos="fade-right" data-aos-offset="350" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+                <img src = "./ProfilePicture.jpg" alt = "Hans Krohn"/>
               </div>
+            </div>
+            <div class = "flex60 content">
+              <p data-aos="fade-left" data-aos-offset="350" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore nihil ipsam distinctio! Vitae necessitatibus in officiis fugit doloribus impedit reprehenderit nam, officia eos itaque veritatis aut nihil? Dicta, est in?
+              </p>
+              <p data-aos="fade-up" data-aos-offset="350" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt cupiditate, obcaecati ipsa veritatis officiis possimus, asperiores perspiciatis debitis ullam repudiandae itaque a vel accusamus eaque harum magni. Reiciendis, repellat repellendus?
+              </p>
+              <a  href = 'mailto:hanskrohn70@gmail.com'><button class = "pointer" data-aos="zoom-out-up" data-aos-offset="350" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">Get In Contact<i class="fa fa-envelope-o" aria-hidden="true"></i></button></a>
+            </div>
+          </div>
+        </div>
+        <div class = "subtitle flex">
+          <div>
+            <h3 data-aos="fade-right" data-aos-offset="350" data-aos-once="true">Education</h3>
+            <hr data-aos="fade-left" data-aos-offset="350" data-aos-once="true">
+          </div>
+          <div class = "education" data-aos="fade-right" data-aos-offset="350" data-aos-once="true">
+            <h4>Western University - London ON</h4>
+            <p>Bachelor of Software Engineering - May 2022 (Expected Graduation Date)</p>
+            <h4>FlatIron School - Houston TX</h4>
+            <p>Software Engineering Bootcamp - May 2019 - August 2019</p>
+          </div>
+        </div>
+        <div class = "subtitle flex">
+          <div>
+            <h3 data-aos="fade-right" data-aos-offset="350" data-aos-once="true">Skills</h3>
+            <hr data-aos="fade-left" data-aos-offset="350" data-aos-once="true">
+          </div>
+          <div class = "flex width100 spaceTop">
+            <div data-aos="fade-up" data-aos-offset="350" data-aos-once="true" data-aos-delay="0" class="flex33 centerSkills">
+              <h4>Languages:</h4>
+              <ul>
+                <li>JavaScript</li>
+                <li>TypeScript</li>
+                <li>HTML/CSS</li>
+                <li>Dart</li>
+                <li>Java</li>
+                <li>Ruby</li>
+              </ul>
+            </div>
+            <div data-aos="fade-up" data-aos-offset="350" data-aos-once="true" data-aos-delay="100" class="flex33 centerSkills">
+              <h4>Frameworks:</h4>
+              <ul>
+                <li>AngularJS</li>
+                <li>ReactJS</li>
+                <li>Flutter</li>
+                <li>Ruby on Rails</li>
+              </ul>
+            </div>
+            <div data-aos="fade-up" data-aos-offset="350" data-aos-once="true" data-aos-delay="200" class="flex33 centerSkills">
+              <h4>Other Tools:</h4>
+              <ul>
+                <li>Redux</li>
+                <li>NodeJS</li>
+                <li>Unity</li>
+                <li>MongoDB</li>
+                <li>SQL</li>
+                <li>Github</li>
+                <li>Git</li>
+              </ul>
             </div>
           </div>
         </div>
         <div class = "subtitle">
-  
+          <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur recusandae a inventore laborum eveniet quae molestiae suscipit deleniti doloremque fuga velit dolor, non aut porro quam libero mollitia soluta quos?</h1>
         </div>
         <div class = "subtitle">
-          
-        </div>
-        <div class = "subtitle">
-          
+          <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur recusandae a inventore laborum eveniet quae molestiae suscipit deleniti doloremque fuga velit dolor, non aut porro quam libero mollitia soluta quos?</h1>
         </div>
       </div>
     </div>
