got asides and button for navigation on landing

--- a/index.html
+++ b/index.html
@@ -36,20 +36,23 @@
       </div>
     </nav>
     <div>
-      <div class = "backgroundImage">
-      </div>
-      <div class = "landing flex marginLeft5Percent">
-        <h3 ><span class = "txt" id = "intro"></span></h3>
-        <h1 ><span class = "txt colorGreen" id = "name"></span></h1>
-        <p><span class = "txt" id = "description"></span></p>
+      <div id = "landing">
+        <div class = "backgroundImage">
+        </div>
+        <div class = "landing flex marginLeft5Percent">
+          <h3 ><span class = "txt" id = "intro"></span></h3>
+          <h1 ><span class = "txt colorGreen" id = "name"></span></h1>
+          <p><span class = "txt" id = "description"></span></p>
+        </div>
+        <button><i class="fas fa-chevron-down"></i></button>
       </div>
       <div class = "container">
         <div class = "subtitle flex " id = "projects">
           <div>
-            <h3 data-aos="fade-right" data-aos-offset="350" data-aos-once="true">Projects</h3>
-            <hr data-aos="fade-left" data-aos-offset="350" data-aos-once="true">
+            <h3 data-aos="fade-right" data-aos-offset="200" data-aos-once="true">Projects</h3>
+            <hr data-aos="fade-left" data-aos-offset="200" data-aos-once="true">
           </div>
-          <div class = "card flex" data-aos="fade-left" data-aos-offset="350" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+          <div class = "card flex" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
             <div class="flex60">
               <div class = "content">
                 <h4>Tracker</h4>
@@ -67,7 +70,7 @@
               </div>
             </div>
           </div>
-          <div class = "card flex" data-aos="fade-right" data-aos-offset="350" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+          <div class = "card flex" data-aos="fade-right" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
             <div class="flex40 flex">
               <div class = "image">
                 <img src = "./eccomerce.png" alt = "E-commerce"/>
@@ -85,7 +88,7 @@
               </div>
             </div>
           </div>
-          <div class = "card flex" data-aos="fade-left" data-aos-offset="350" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+          <div class = "card flex" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
             <div class="flex60">
               <div class = "content">
                 <h4>High or Low</h4>
@@ -106,32 +109,32 @@
         </div>
         <div class = "subtitle flex">
           <div>
-            <h3 data-aos="fade-right" data-aos-offset="350" data-aos-once="true">About</h3>
-            <hr data-aos="fade-left" data-aos-offset="350" data-aos-once="true">
+            <h3 data-aos="fade-right" data-aos-offset="200" data-aos-once="true">About</h3>
+            <hr data-aos="fade-left" data-aos-offset="200" data-aos-once="true">
           </div>
           <div class="flex spaceTop">
             <div class = "flex40 flex">
-              <div class = "image" data-aos="fade-right" data-aos-offset="350" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+              <div class = "image" data-aos="fade-right" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
                 <img src = "./ProfilePicture.jpg" alt = "Hans Krohn"/>
               </div>
             </div>
             <div class = "flex60 content">
-              <p data-aos="fade-left" data-aos-offset="350" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+              <p data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore nihil ipsam distinctio! Vitae necessitatibus in officiis fugit doloribus impedit reprehenderit nam, officia eos itaque veritatis aut nihil? Dicta, est in?
               </p>
-              <p data-aos="fade-up" data-aos-offset="350" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+              <p data-aos="fade-up" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt cupiditate, obcaecati ipsa veritatis officiis possimus, asperiores perspiciatis debitis ullam repudiandae itaque a vel accusamus eaque harum magni. Reiciendis, repellat repellendus?
               </p>
-              <a  href = 'mailto:hanskrohn70@gmail.com'><button class = "pointer" data-aos="zoom-out-up" data-aos-offset="350" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">Get In Contact<i class="fa fa-envelope-o" aria-hidden="true"></i></button></a>
+              <a  href = 'mailto:hanskrohn70@gmail.com'><button class = "pointer" data-aos="zoom-out-up" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">Get In Contact<i class="fa fa-envelope-o" aria-hidden="true"></i></button></a>
             </div>
           </div>
         </div>
         <div class = "subtitle flex">
           <div>
-            <h3 data-aos="fade-right" data-aos-offset="350" data-aos-once="true">Education</h3>
-            <hr data-aos="fade-left" data-aos-offset="350" data-aos-once="true">
+            <h3 data-aos="fade-right" data-aos-offset="200" data-aos-once="true">Education</h3>
+            <hr data-aos="fade-left" data-aos-offset="200" data-aos-once="true">
           </div>
-          <div class = "education" data-aos="fade-right" data-aos-offset="350" data-aos-once="true">
+          <div class = "education" data-aos="fade-right" data-aos-offset="200" data-aos-once="true">
             <h4>Western University - London ON</h4>
             <p>Bachelor of Software Engineering - May 2022 (Expected Graduation Date)</p>
             <h4>FlatIron School - Houston TX</h4>
@@ -140,11 +143,11 @@
         </div>
         <div class = "subtitle flex">
           <div>
-            <h3 data-aos="fade-right" data-aos-offset="350" data-aos-once="true">Skills</h3>
-            <hr data-aos="fade-left" data-aos-offset="350" data-aos-once="true">
+            <h3 data-aos="fade-right" data-aos-offset="200" data-aos-once="true">Skills</h3>
+            <hr data-aos="fade-left" data-aos-offset="200" data-aos-once="true">
           </div>
           <div class = "flex width100 spaceTop">
-            <div data-aos="fade-up" data-aos-offset="350" data-aos-once="true" data-aos-delay="0" class="flex33 centerSkills">
+            <div data-aos="fade-up" data-aos-offset="200" data-aos-once="true" data-aos-delay="0" class="flex33 centerSkills">
               <h4>Languages:</h4>
               <ul>
                 <li>JavaScript</li>
@@ -155,7 +158,7 @@
                 <li>Ruby</li>
               </ul>
             </div>
-            <div data-aos="fade-up" data-aos-offset="350" data-aos-once="true" data-aos-delay="100" class="flex33 centerSkills">
+            <div data-aos="fade-up" data-aos-offset="200" data-aos-once="true" data-aos-delay="100" class="flex33 centerSkills">
               <h4>Frameworks:</h4>
               <ul>
                 <li>AngularJS</li>
@@ -164,7 +167,7 @@
                 <li>Ruby on Rails</li>
               </ul>
             </div>
-            <div data-aos="fade-up" data-aos-offset="350" data-aos-once="true" data-aos-delay="200" class="flex33 centerSkills">
+            <div data-aos="fade-up" data-aos-offset="200" data-aos-once="true" data-aos-delay="200" class="flex33 centerSkills">
               <h4>Other Tools:</h4>
               <ul>
                 <li>Redux</li>
@@ -178,11 +181,13 @@
             </div>
           </div>
         </div>
-        <div class = "subtitle">
-          <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur recusandae a inventore laborum eveniet quae molestiae suscipit deleniti doloremque fuga velit dolor, non aut porro quam libero mollitia soluta quos?</h1>
-        </div>
-        <div class = "subtitle">
-          <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur recusandae a inventore laborum eveniet quae molestiae suscipit deleniti doloremque fuga velit dolor, non aut porro quam libero mollitia soluta quos?</h1>
+       <div class = "footer flex justifyCenter">
+         <a class = "pointer noUnderline" href = "https://github.com/hk72/hk72.github.io"><p>Developed by Hans Krohn <i class="fa fa-github" aria-hidden="true"></i></p></a>
+       </div>
+       <div class = "aside">
+         <div class = "format" id = "aside">
+          
+         </div>
         </div>
       </div>
     </div>
