fixed bottom half for mobile view

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <button><i class="fas fa-chevron-down"></i></button>
       </div>
       <div class = "container">
-        <div class = "subtitle flex " id = "projects">
+        <div class = "subtitle flex" id = "projects">
           <div>
             <h3 data-aos="fade-right" data-aos-offset="200" data-aos-once="true">Projects</h3>
             <hr data-aos="fade-left" data-aos-offset="200" data-aos-once="true">
@@ -146,7 +146,7 @@
             <h3 data-aos="fade-right" data-aos-offset="200" data-aos-once="true">Skills</h3>
             <hr data-aos="fade-left" data-aos-offset="200" data-aos-once="true">
           </div>
-          <div class = "flex width100 spaceTop">
+          <div class = "flex width100 spaceTop flexColumn">
             <div data-aos="fade-up" data-aos-offset="200" data-aos-once="true" data-aos-delay="0" class="flex33 centerSkills">
               <h4>Languages:</h4>
               <ul>
