mobile view finished

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h3 data-aos="fade-right" data-aos-offset="200" data-aos-once="true">Projects</h3>
             <hr data-aos="fade-left" data-aos-offset="200" data-aos-once="true">
           </div>
-          <div class = "card flex" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+          <div id = "flexDirectionColumForMobile" class = "card flex" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
             <div class="flex60">
               <div class = "content">
                 <h4>Tracker</h4>
@@ -70,7 +70,7 @@
               </div>
             </div>
           </div>
-          <div class = "card flex" data-aos="fade-right" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+          <div id = "flexDirectionColumForMobile" class = "card flex" data-aos="fade-right" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
             <div class="flex40 flex">
               <div class = "image">
                 <img src = "./eccomerce.png" alt = "E-commerce"/>
@@ -88,7 +88,7 @@
               </div>
             </div>
           </div>
-          <div class = "card flex" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
+          <div id = "flexDirectionColumForMobile" class = "card flex" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
             <div class="flex60">
               <div class = "content">
                 <h4>High or Low</h4>
@@ -106,13 +106,16 @@
               </div>
             </div>
           </div>
+          <div class = "flex justifyCenter">
+            <a class = "noUnderline" href = "https://github.com/hk72"><button class = "pointer mobileButtons" data-aos="zoom-out-up" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">Visit Github <i class="fa fa-github" aria-hidden="true"></i></button></a>
+          </div>
         </div>
         <div class = "subtitle flex">
           <div>
             <h3 data-aos="fade-right" data-aos-offset="200" data-aos-once="true">About</h3>
             <hr data-aos="fade-left" data-aos-offset="200" data-aos-once="true">
           </div>
-          <div class="flex spaceTop">
+          <div class="flex spaceTop" id = "flexDirectionColumForMobile">
             <div class = "flex40 flex">
               <div class = "image" data-aos="fade-right" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
                 <img src = "./ProfilePicture.jpg" alt = "Hans Krohn"/>
@@ -125,7 +128,9 @@
               <p data-aos="fade-up" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt cupiditate, obcaecati ipsa veritatis officiis possimus, asperiores perspiciatis debitis ullam repudiandae itaque a vel accusamus eaque harum magni. Reiciendis, repellat repellendus?
               </p>
-              <a  href = 'mailto:hanskrohn70@gmail.com'><button class = "pointer" data-aos="zoom-out-up" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">Get In Contact<i class="fa fa-envelope-o" aria-hidden="true"></i></button></a>
+              <div class = "flex justifyCenter">
+                <a class = "noUnderline" href = 'mailto:hanskrohn70@gmail.com'><button class = "pointer mobileButtons" data-aos="zoom-out-up" data-aos-offset="200" data-aos-delay="50"  data-aos-duration="1000" data-aos-once="true">Get in Contact <i class="fa fa-envelope-o" aria-hidden="true"></i></button></a>
+              </div>
             </div>
           </div>
         </div>
@@ -158,7 +163,7 @@
                 <li>Ruby</li>
               </ul>
             </div>
-            <div data-aos="fade-up" data-aos-offset="200" data-aos-once="true" data-aos-delay="100" class="flex33 centerSkills">
+            <div data-aos="fade-up" data-aos-offset="200" data-aos-once="true" data-aos-delay="150" class="flex33 centerSkills">
               <h4>Frameworks:</h4>
               <ul>
                 <li>AngularJS</li>
@@ -167,7 +172,7 @@
                 <li>Ruby on Rails</li>
               </ul>
             </div>
-            <div data-aos="fade-up" data-aos-offset="200" data-aos-once="true" data-aos-delay="200" class="flex33 centerSkills">
+            <div data-aos="fade-up" data-aos-offset="200" data-aos-once="true" data-aos-delay="300" class="flex33 centerSkills">
               <h4>Other Tools:</h4>
               <ul>
                 <li>Redux</li>
